Update tests to handle new routing.  Fix cab multi page. [#98320976]

--- a/app/views/cab_trips/_grouped_cab_trips.html.erb
+++ b/app/views/cab_trips/_grouped_cab_trips.html.erb
@@ -4,8 +4,9 @@
       <%= format_time_for_listing_day day %>
     </td>
     <td>
-      <% if @grouped_cab_trips.has_key?(day.to_s) && @grouped_cab_trips[day.to_s].size %>
-        <%= link_to translate_helper("edit_x_cab_trips",count: (@grouped_cab_trips[day.to_s].size)), edit_multiple_cab_trips_path(start: day.in_time_zone.to_i) %>
+      <% debugger %>
+      <% if @grouped_cab_trips.has_key?(day.to_s) && @grouped_cab_trips[day.to_s].size > 0 %>
+        <%= link_to translate_helper("edit_x_cab_trips", count: (@grouped_cab_trips[day.to_s].size)), edit_multiple_cab_trips_path(start: day.in_time_zone.to_i) %>
       <% else %>
         No trips
       <% end %>
