--- a/app/views/vehicles/_form.html.erb
+++ b/app/views/vehicles/_form.html.erb
@@ -70,7 +70,7 @@
     </ol>
 
     <div class="actions">
-      <%= f.submit, translate_helper("vehicle_form_submit") %>
+      <%= f.submit translate_helper("vehicle_form_submit") %>
     </div>
 
   </fieldset>
