--- a/app/views/trips/reconcile_cab.html.erb
+++ b/app/views/trips/reconcile_cab.html.erb
@@ -12,18 +12,18 @@
     <th></th>
   </tr>
 
-<% @trips.each do |trip| %>
-  <tr>
-    <td><%= trip.pickup_time.to_s %></td>
-    <td><%= trip.customer.name %></td>
-    <td><%= trip.pickup_address.text %></td>
-    <td><%= trip.dropoff_address.text %></td>
-    <td><%= display_trip_result trip.trip_result %></td>
+  <% @trips.each do |trip| %>
+    <tr>
+      <td><%= trip.pickup_time.to_s %></td>
+      <td><%= trip.customer.name %></td>
+      <td><%= trip.pickup_address.text %></td>
+      <td><%= trip.dropoff_address.text %></td>
+      <td><%= display_trip_result trip.trip_result %></td>
 
-    <td><%= button_to translate_helper("mark_as_no_show", trip_no_show_path(trip) %></td>
+      <td><%= button_to translate_helper("mark_as_no_show", trip_no_show_path(trip)) %></td>
 
-  </tr>
-<% end %>
+    </tr>
+  <% end %>
 </table>
 
 <%= will_paginate @trips %>
