--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -13,6 +13,7 @@
 
 @import "bootstrap-sprockets";
 @import "bootstrap";
+@import "font-awesome";
 @import 'dataTables/jquery.dataTables';
 @import "jquery-ui-1.8.9.custom";
 @import "jquery.weekcalendar";
