--- a/app/assets/stylesheets/theme.scss
+++ b/app/assets/stylesheets/theme.scss
@@ -1346,17 +1346,15 @@ body.trips #page-header h1 {
 body.trips #weekday_select {
   float: left;
   white-space: nowrap;
-  width: 500px; /* Wide enough for all 7 buttons without wrapping. */
-}
+  //width: 500px; /* Wide enough for all 7 buttons without wrapping. */
 
-body.trips #weekday_select p {
-  margin: 0.6em 0 0.1em 1em;
-  color: #0081cc;
-  cursor: pointer;
+  .ui-button-text {
+    padding: 0.2em 0.5em;
+  }
 }
 
 body.trips #weekday_select_buttons {
-  margin: 1em;
+  //margin: 1em;
   width: 100%;
 }
 
