--- a/app/views/trips/_filters.html.haml
+++ b/app/views/trips/_filters.html.haml
@@ -1,8 +1,21 @@
-.panel.panel-default
+.panel.panel-default#trip_filter_panel
   .panel-heading
     %h3.panel-title
       = translate_helper(:filter)
-  .panel-body
-    .btns.pull-right
-      = button_tag  translate_helper(:reset), class: 'btn action-button', role: 'button'
+      = add_tooltip(:filter_help)
+  .panel-body{style: 'padding: 5px;'}
+    = form_for :trip, url: trips_path, html: { :id => "trip_filter_form" }, :method => :get do |f|
+      .btns.pull-right
+        = button_tag  translate_helper(:reset), class: 'btn action-button', role: 'button'
+      .col-sm-12{style: 'padding: 5px;'}
+        = render partial: 'weekday_select'
+      .col-sm-12{style: 'padding: 5px;'}
+        = f.label :vehicle_id, translate_helper(:vehicle)
+        = f.select :vehicle_id, options_from_collection_for_select( @vehicles, :id, :name), {:include_blank => translate_helper(:all) }, { :class => 'form-control' }
+      .col-sm-12{style: 'padding: 5px;'}
+        = f.label :driver_id, translate_helper(:driver)
+        = f.select :driver_id, options_from_collection_for_select( @drivers, :id, :name), {:include_blank => translate_helper(:all) }, { :class => 'form-control' }
+      .col-sm-12{style: 'padding: 5px;'}
+        = f.label :trip_result_id, translate_helper(:trip_result)
+        = f.select :trip_result_id, options_from_collection_for_select(TripResult.all, :id, :name), {:include_blank => translate_helper(:all) }, { :class => 'form-control' }
     
