--- a/app/views/trips/_javascript.html.erb
+++ b/app/views/trips/_javascript.html.erb
@@ -400,12 +400,13 @@
 
     function initWeekdaySelect() {
       $('#weekday_select').buttonset();
-      $("#weekday_select").hover($.noop, function() {
-        $("#weekday_select_buttons").slideUp();
-      });
-      $("#weekday_select").click(function() {
-        $("#weekday_select_buttons").slideDown();
-      });
+      // animation is deprecated
+      //$("#weekday_select").hover($.noop, function() {
+      //  $("#weekday_select_buttons").slideUp();
+      //});
+      //$("#weekday_select").click(function() {
+      //  $("#weekday_select_buttons").slideDown();
+      //});
       buttons = $('#weekday_select input');
       for (var i = getFirstDayOfWeek();
            i < getFirstDayOfWeek() + getDaysToShow(); ++i) {
