trip filters UI; added trip_filter service class to handle filtering logic

--- a/app/views/trips/_filters.html.haml
+++ b/app/views/trips/_filters.html.haml
@@ -2,20 +2,35 @@
   .panel-heading
     %h3.panel-title
       = translate_helper(:filter)
-      = add_tooltip(:filter_help)
   .panel-body{style: 'padding: 5px;'}
-    = form_for :trip, url: trips_path, html: { :id => "trip_filter_form" }, :method => :get do |f|
+    = form_for :trip_filters, url: trips_path, html: { :id => "trip_filter_form" }, :method => :get do |f|
       .btns.pull-right
-        = button_tag  translate_helper(:reset), class: 'btn action-button', role: 'button'
+        = button_tag  translate_helper(:reset), id: 'resetTripFilters', class: 'btn action-button', role: 'button'
       .col-sm-12{style: 'padding: 5px;'}
         = render partial: 'weekday_select'
       .col-sm-12{style: 'padding: 5px;'}
         = f.label :vehicle_id, translate_helper(:vehicle)
-        = f.select :vehicle_id, options_from_collection_for_select( @vehicles, :id, :name), {:include_blank => translate_helper(:all) }, { :class => 'form-control' }
+        = f.select :vehicle_id, options_from_collection_for_select( @vehicles, :id, :name, session[:vehicle_id]), {:include_blank => translate_helper(:all) }, { :class => 'form-control' }
       .col-sm-12{style: 'padding: 5px;'}
         = f.label :driver_id, translate_helper(:driver)
-        = f.select :driver_id, options_from_collection_for_select( @drivers, :id, :name), {:include_blank => translate_helper(:all) }, { :class => 'form-control' }
+        = f.select :driver_id, options_from_collection_for_select( @drivers, :id, :name, session[:driver_id]), {:include_blank => translate_helper(:all) }, { :class => 'form-control' }
+      .col-sm-12{style: 'padding: 5px;'}
+        = f.label :status_id, translate_helper(:status)
+        = f.select :status_id, options_for_select( [[translate_helper(:scheduled), 1], [translate_helper(:unscheduled), 2]], session[:status_id]), {:include_blank => translate_helper(:all) }, { :class => 'form-control' }
       .col-sm-12{style: 'padding: 5px;'}
         = f.label :trip_result_id, translate_helper(:trip_result)
-        = f.select :trip_result_id, options_from_collection_for_select(TripResult.all, :id, :name), {:include_blank => translate_helper(:all) }, { :class => 'form-control' }
+        = f.select :trip_result_id, options_from_collection_for_select( TripResult.all, :id, :name, session[:trip_result_id]), {:include_blank => translate_helper(:all) }, { :class => 'form-control' }
+
+:javascript
+  $(document).ready(function(){
+    $('#trip_filter_form select').on('change', function() {
+      $('#trip_filter_form').submit();
+    });
+    $('#resetTripFilters').on('click', function() {
+      $('#trip_filter_form select').val('');
+
+      $('#trip_filter_form select').submit();
+    });
+  });
+      
     
