--- a/app/views/customers/_form.html.erb
+++ b/app/views/customers/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_for(@customer) do |f| %>
+<%= simple_form_for(@customer) do |f| %>
   <% if @customer.errors.any? %>
     <div id="error_explanation">
       <h2><%= translate_helper("customer_form_error_message", count: @customer.errors.count)%></h2>
@@ -131,6 +131,10 @@
       </li>
       <% end %>
     </ol>
+
+    <div class="customer_providers">
+      <%= f.association :authorized_providers, as: :check_boxes %>
+    </div>
 
     <div class="actions">
       <%= f.submit %>
