--- a/app/views/providers/show.html.erb
+++ b/app/views/providers/show.html.erb
@@ -50,6 +50,7 @@
       <th><%= translate_helper("email") %></th>
       <th><%= translate_helper("role") %></th>
       <th><%= translate_helper("last_login") %></th>
+      <th><%= translate_helper("expires_at") %></th>
       <% if can? :edit, Role %>
       <th></th>
       <th></th>
@@ -61,11 +62,12 @@
       <td class="<%= role.name.downcase %>">
         <%= role.user.email %>
         <% if role.user == current_user %>
-        <span class="separator">|</span> <%= link_to translate_helper("change_password"), show_change_password_path, :class=>'change-password' %>
+          <span class="separator">|</span> <%= link_to translate_helper("change_password"), show_change_password_path, :class=>'change-password' %>
         <% end %>
       </td>
       <td><%= role.name %></td>
       <td><%= role.user.last_sign_in_at %></td>
+      <td><%= link_to_if role.user != current_user, role.user.expires_at.present? ? role.user.expires_at : "N/A", show_change_expiration_path(id: role.user.id), :class=>'change-expiration' %></td>
       <% if can_edit_role?(role) %>
         <td>
           <%= form_for(role, :url=>provider_change_role_path(@provider.id), :html => { :method => :post }) do |f| %>
