--- a/app/views/trips/edit.html.erb
+++ b/app/views/trips/edit.html.erb
@@ -1,9 +1,4 @@
-<div id="page-header" class="clearfix">
-  <h1><%= translate_helper("editing_trip") %></h1>
-  <div class="clearfix"></div>
-</div>
-
-<%= render 'form' %>
+<%= render 'form', edit_mode: :edit %>
 
 <%= render 'javascript' %>
 
