--- a/app/views/trips/new.html.erb
+++ b/app/views/trips/new.html.erb
@@ -1,7 +1,3 @@
-<div id="page-header" class="clearfix">
-  <h1><%= translate_helper("new_trip") %></h1>
-</div>
-
-<%= render 'form' %>
+<%= render 'form', edit_mode: :new %>
 
 <%= render 'javascript' %>
