--- a/app/assets/stylesheets/bootstrap_override.css.scss
+++ b/app/assets/stylesheets/bootstrap_override.css.scss
@@ -1,5 +1,6 @@
 .action-button {
   @extend .btn-primary;
+  color: white !important;
   text-shadow: none;
   margin-right: 5px;
   padding: 3px 6px;
