--- a/app/assets/stylesheets/theme.scss
+++ b/app/assets/stylesheets/theme.scss
@@ -736,7 +736,7 @@ table td.nowrap {
 .ui-timepicker-div .ui-widget-header{ margin-bottom: 8px; }
 .ui-timepicker-div dl{ text-align: left; }
 .ui-timepicker-div dl dt{ height: 25px; }
-.ui-timepicker-div dl dd{ margin: -25px 0 10px 65px; }
+//.ui-timepicker-div dl dd{ margin: -25px 0 10px 65px; }
 .ui-timepicker-div td {  }
 .ui_tpicker_hour,
 .ui_tpicker_minute { font-size: 9px; }
