--- a/app/views/runs/_form.html.erb
+++ b/app/views/runs/_form.html.erb
@@ -1,3 +1,4 @@
+<%= render 'shared/highlight_active_tab_js', is_primary_nav: true, tab_class: 'runs' %>
 <% if @run.errors.any? %>
   <div id="error_explanation">
     <h2><%= translate_helper("runs_form_error_message", count: @run.errors.count)%></h2>
