--- a/app/views/trips/index.html.haml
+++ b/app/views/trips/index.html.haml
@@ -1,7 +1,7 @@
 = render 'shared/highlight_active_tab_js', is_primary_nav: true, tab_class: 'trips'
 .clearfix.row#page-header
   %h1= translate_helper("trips")
-  = link_to translate_helper("new_trip_link_text"), new_trip_path, :class=>'btn btn-default pull-right'
+  = link_to translate_helper("new_trip_link_text"), new_trip_path, :class=>'btn action-button pull-right'
   .clearfix
 
 .col-md-3
@@ -10,8 +10,6 @@
   %div#calendar { data-start-time: @week_start.to_i * 1000}
 
   = render :partial => 'list'
-
-  %hr
 
 = render 'javascript'
 
