change panel heading as panel-primary class

--- a/app/views/trips/_assignment_panel.html.haml
+++ b/app/views/trips/_assignment_panel.html.haml
@@ -1,4 +1,4 @@
-.panel.panel-default#trip_assignment_panel
+.panel.panel-primary#trip_assignment_panel
   .panel-heading
     %h3.panel-title
       = translate_helper(:assignment)
