--- a/app/views/trips/_customer_panel.html.haml
+++ b/app/views/trips/_customer_panel.html.haml
@@ -1,4 +1,4 @@
-.panel.panel-default#trip_customer_panel
+.panel.panel-primary#trip_customer_panel
   .panel-heading
     %h3.panel-title
       = translate_helper(:customer)
