--- a/app/views/trips/_trip_parameters_panel.html.haml
+++ b/app/views/trips/_trip_parameters_panel.html.haml
@@ -1,4 +1,4 @@
-.panel.panel-default#trip_parameters_panel
+.panel.panel-primary#trip_parameters_panel
   .panel-heading
     %h3.panel-title
       = translate_helper(:trip_parameters)
