--- a/app/views/trips/_filters.html.haml
+++ b/app/views/trips/_filters.html.haml
@@ -1,4 +1,4 @@
-.panel.panel-default#trip_filter_panel
+.panel.panel-primary#trip_filter_panel
   .panel-heading
     %h3.panel-title
       = translate_helper(:filter)
