--- a/app/views/trips/_repetition_panel.html.haml
+++ b/app/views/trips/_repetition_panel.html.haml
@@ -1,4 +1,4 @@
-.panel.panel-default#trip_repetition_panel
+.panel.panel-primary#trip_repetition_panel
   .panel-heading
     %h3.panel-title
       = translate_helper(:repetition)
