--- a/app/assets/stylesheets/bootstrap_override.css.scss
+++ b/app/assets/stylesheets/bootstrap_override.css.scss
@@ -9,3 +9,27 @@
   }
   font-weight: bold;
 }
+
+#customer_providers
+{
+  /*border: solid 1px black;
+  border-radius: 4px;*/
+  padding: 8px 8px 8px 0px;
+  margin-bottom: 12px;
+}
+
+#customer_providers div
+{
+  padding: 0px;
+}
+
+.checkbox
+{
+  margin: 0px;
+}
+
+.radio + .radio,
+.checkbox + .checkbox 
+{
+  margin: 0px;
+}
