show vs edit link depending on provider [#98322312]

--- a/app/views/customers/show.html.erb
+++ b/app/views/customers/show.html.erb
@@ -139,7 +139,11 @@
   <% if @trips.present? %>
     <% for trip in @trips %>
     <tr>
-      <td><%= link_to trip.pickup_time.strftime('%m-%d-%Y %I:%M%P'), edit_trip_path(trip) %></td>
+      <%- if @read_only_customer %>
+        <td><%= link_to trip.pickup_time.strftime('%m-%d-%Y %I:%M%P'), trip_path(trip) %></td>
+      <%- else %>
+        <td><%= link_to trip.pickup_time.strftime('%m-%d-%Y %I:%M%P'), edit_trip_path(trip) %></td>
+      <% end %>
       <td><%= trip.trip_result_name %></td>
     </tr>
     <% end %>
