use jQuery fullcalender plugin with resource view (hacked version in order to support each resource represents a day)

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -18,5 +18,6 @@
 @import "jquery-ui-1.8.9.custom";
 @import "jquery.weekcalendar";
 @import "jquery-ui-timepicker-addon";
+@import "fullcalendar";
 @import "theme";
 @import "bootstrap_override";
