--- a/app/views/trips/_form_header.html.haml
+++ b/app/views/trips/_form_header.html.haml
@@ -13,6 +13,6 @@
         = f.submit translate_helper(:update), class: 'btn action-button'
         = link_to translate_helper(:back), trips_path, class: "btn btn-default"
       - else
-        = link_to(translate_helper("delete"), @trip, :confirm => translate_helper("delete_trip_confirm"), :method => :delete, :remote => true, :id => 'trip_delete', :class=>'btn action-button btn-danger') if !@trip.new_record? && can?(:destroy, @trip)
+        = link_to(translate_helper("delete"), @trip, :confirm => translate_helper("delete_trip_confirm"), :method => :delete, :id => 'trip_delete', :class=>'btn action-button btn-danger') if !@trip.new_record? && can?(:destroy, @trip)
         = link_to translate_helper("edit"), edit_trip_path(@trip), :class=>'btn action-button' if !@trip.new_record? && can?(:edit, @trip)
         = link_to translate_helper(:back), trips_path, class: "btn btn-default"
