--- a/app/views/trips/_filters.html.haml
+++ b/app/views/trips/_filters.html.haml
@@ -10,10 +10,10 @@
         = button_tag  translate_helper(:reset), id: 'resetTripFilters', class: 'btn action-button', role: 'button'
       .col-sm-12.datepicker{style: 'padding: 5px;'}
         = f.label :start, translate_helper("from_date")
-        = f.text_field :start, :value => format_time_for_listing_day(@start_pickup_date), class: 'form-control'
+        = f.text_field :start, :value => format_time_for_listing_day(@start_pickup_date), class: 'form-control', readonly: true
       .col-sm-12.datepicker{style: 'padding: 5px;'}
         = f.label :end, translate_helper("to_date")
-        = f.text_field :end, :value => format_time_for_listing_day(@end_pickup_date), class: 'form-control'
+        = f.text_field :end, :value => format_time_for_listing_day(@end_pickup_date), class: 'form-control', readonly: true
       .col-sm-12{style: 'padding: 5px;'}
         = render partial: 'weekday_select'
       .col-sm-12{style: 'padding: 5px;'}
