WIP address editing [#9894034]

--- a/app/views/addresses/_form.html.erb
+++ b/app/views/addresses/_form.html.erb
@@ -31,7 +31,7 @@
 
       <li class="selfclear">
         <%= form.label :notes, translate_helper("address_notes") %>
-        <%= form.text_field :notes %>
+        <%= form.text_area :notes %>
       </li>
       
       <%= form.hidden_field :provider_id %>
