rename theme csses to differentia v1 and v2 versions; added base_lib to configure mainly bootstrap variables; set up default brand color as #336699

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -11,6 +11,7 @@
  * file per style scope.
  */
 
+@import "base_lib";
 @import "bootstrap-sprockets";
 @import "bootstrap";
 @import "font-awesome";
@@ -19,5 +20,5 @@
 @import "jquery.weekcalendar";
 @import "jquery-ui-timepicker-addon";
 @import "fullcalendar";
-@import "theme";
-@import "bootstrap_override";
+@import "v1_theme";
+@import "v2_theme";
